* Clean more 
* Fix send PQD on android 
* Cleanup again 
* Cleanup 
* Cleanup 
* Setup sentry 
* Update build android 
* CLean code 
* Fix update balance after send payment 
* Fix list transaction 
* Fix small display last transaction 
* Add latestTransaction 
* Update 
* Add cache 
* Updaet soon 
* Update qr 
* Update about 
* Add settings 
* Cleanup 
* Remove code 
* Cleanup 
* Add init fastlane 
* Clean code 
* add config react-native-vector-icons for android 
* Add app for android 