@@ -1,10 +1,10 @@
-import Obscure from 'react-native-obscure';
+// import Obscure from 'react-native-obscure';
 export default class Privacy {
   static enableBlur() {
-    Obscure.activateObscure();
+    //Obscure.activateObscure();
   }
 
   static disableBlur() {
-    Obscure.deactivateObscure();
+    //Obscure.deactivateObscure();
   }
 }
