@@ -8,17 +8,6 @@ const path = require('path');
 const exclusionList = require('metro-config/src/defaults/exclusionList');
 
 module.exports = {
-  resolver: {
-    blockList: exclusionList([
-      // This stops "react-native run-windows" from causing the metro server to crash if its already running
-      new RegExp(`${path.resolve(__dirname, 'windows').replace(/[/\\]/g, '/')}.*`),
-      // This prevents "react-native run-windows" from hitting: EBUSY: resource busy or locked, open msbuild.ProjectImports.zip
-      /.*\.ProjectImports\.zip/,
-    ])
-    // extraNodeModules: {
-    //   crypto: require.resolve('react-native-crypto')
-    // }
-  },
   transformer: {
     getTransformOptions: async () => ({
       transform: {
