@@ -23,6 +23,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
+    "detox": "18.19.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
@@ -38,8 +39,7 @@
     "jest": "^26.1.0",
     "prettier": "^2.2.1",
     "react-test-renderer": "17.0.1",
-    "typescript": "^4.3.5",
-    "detox": "18.19.0"
+    "typescript": "^4.3.5"
   },
   "engines": {
     "node": ">=10.16.0",
@@ -98,7 +98,6 @@
   "dependencies": {
     "@babel/preset-env": "7.12.1",
     "@polkadot/api": "^5.5.1",
-    "@polkadot/reactnative-identicon": "^0.84.3",
     "@polkadot/ui-keyring": "^0.84.3",
     "@polkadot/ui-settings": "^0.84.3",
     "@react-native-async-storage/async-storage": "1.15.5",
@@ -124,12 +123,14 @@
     "lottie-ios": "3.2.3",
     "lottie-react-native": "^4.0.3",
     "metro-react-native-babel-preset": "0.66.2",
+    "path-browserify": "0.0.0",
     "process": "0.11.10",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-localization": "1.0.17",
     "react-native": "0.64.2",
     "react-native-camera": "4.0.1",
+    "react-native-crypto": "^2.2.0",
     "react-native-device-info": "8.1.3",
     "react-native-document-picker": "https://github.com/BlueWallet/react-native-document-picker#3684d4fcc2bc0b47c32be39024e4796004c3e428",
     "react-native-elements": "2.3.2",
@@ -143,6 +144,7 @@
     "react-native-localize": "2.1.1",
     "react-native-modal": "12.0.3",
     "react-native-navigation-bar-color": "https://github.com/BlueWallet/react-native-navigation-bar-color#3b2894ae62fbce99a3bd24105f0921cebaef5c94",
+    "react-native-pager-view": "^5.4.4",
     "react-native-passcode-auth": "https://github.com/BlueWallet/react-native-passcode-auth#a2ff977ba92b36f8d0a5567f59c05cc608e8bd12",
     "react-native-popup-menu-android": "1.0.3",
     "react-native-privacy-snapshot": "https://github.com/BlueWallet/react-native-privacy-snapshot#529e4627d93f67752a27e82a040ff7b64dca0783",
@@ -150,12 +152,14 @@
     "react-native-push-notification": "5.1.1",
     "react-native-qrcode-svg": "6.1.1",
     "react-native-quick-actions": "0.3.13",
+    "react-native-randombytes": "^3.6.1",
     "react-native-rate": "1.2.6",
     "react-native-safe-area-context": "3.3.0",
     "react-native-screens": "3.5.0",
     "react-native-share": "7.0.0",
     "react-native-sortable-list": "https://github.com/BlueWallet/react-native-sortable-list.git#46e39a30ae0c4328e7c06c30b72b1af0b69e1aeb",
     "react-native-svg": "12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-tooltip": "https://github.com/BlueWallet/react-native-tooltip#d369e7ece09e4dec73873f1cfeac83e9d35294a6",
     "react-native-tor": "0.1.7",
     "react-native-vector-icons": "^8.1.0",
@@ -167,10 +171,7 @@
     "styled-components": "^5.3.1",
     "url": "0.11.0",
     "util": "0.12.4",
-    "wif": "2.0.6",
-    "path-browserify": "0.0.0",
-    "react-native-crypto": "^2.1.0",
-    "react-native-randombytes": "^3.0.0"
+    "wif": "2.0.6"
   },
   "react-native": {
     "fs": "react-native-level-fs",
@@ -179,7 +180,9 @@
     "_stream_writable": "readable-stream/writable",
     "_stream_duplex": "readable-stream/duplex",
     "_stream_passthrough": "readable-stream/passthrough",
-    "stream": "stream-browserify"
+    "stream": "stream-browserify",
+    "crypto": "react-native-crypto",
+    "path": "path-browserify"
   },
   "detox": {
     "configurations": {
@@ -218,6 +221,8 @@
     "_stream_writable": "readable-stream/writable",
     "_stream_duplex": "readable-stream/duplex",
     "_stream_passthrough": "readable-stream/passthrough",
-    "stream": "stream-browserify"
+    "stream": "stream-browserify",
+    "crypto": "react-native-crypto",
+    "path": "path-browserify"
   }
 }
