@@ -1,1 +1,1 @@
-"* Clean more \n* Fix send PQD on android \n* Cleanup again \n* Cleanup \n* Cleanup \n* Setup sentry \n* Update build android \n* CLean code \n* Fix update balance after send payment \n* Fix list transaction \n* Fix small display last transaction \n* Add latestTransaction \n* Update \n* Add cache \n* Updaet soon \n* Update qr \n* Update about \n* Add settings \n* Cleanup \n* Remove code \n* Cleanup \n* Add init fastlane \n* Clean code \n* add config react-native-vector-icons for android \n* Add app for android \n"
+"* Remove some package do not use \n* Clean more \n* Fix send PQD on android \n* Cleanup again \n* Cleanup \n* Cleanup \n* Setup sentry \n* Update build android \n* CLean code \n* Fix update balance after send payment \n* Fix list transaction \n* Fix small display last transaction \n* Add latestTransaction \n* Update \n* Add cache \n* Updaet soon \n* Update qr \n* Update about \n* Add settings \n* Cleanup \n* Remove code \n* Cleanup \n* Add init fastlane \n* Clean code \n* add config react-native-vector-icons for android \n* Add app for android \n"
