@@ -1,3 +1,4 @@
+* Remove some package do not use 
 * Clean more 
 * Fix send PQD on android 
 * Cleanup again 
